Implemented pages route (#5)
