# app/api/pages/blueprint.js
@@ -2,8 +2,8 @@ export default {
   get: {
     all: {
       name: 'optional',
-      isMobile: 'optional',
-      userId: 'optional',
+      prototypeId: 'optional',
+      pageTypeId: 'optional',
       attributes: 'optional',
       limit: 'optional',
       populate: 'optional',
@@ -11,8 +11,8 @@ export default {
     one: {
       id: 'required',
       name: 'optional',
-      isMobile: 'optional',
-      userId: 'optional',
+      prototypeId: 'optional',
+      pageTypeId: 'optional',
       attributes: 'optional',
       limit: 'optional',
       populate: 'optional',
@@ -21,14 +21,14 @@ export default {
   post: {
     add: {
       name: 'required',
-      isMobile: 'required',
-      userId: 'required',
+      prototypeId: 'required',
+      pageTypeId: 'required',
     },
   },
   patch: {
     one: {
       name: 'optional',
-      isMobile: 'optional',
+      pageTypeId: 'optional',
     },
   },
   delete: {
