# app/api/pages/model.js
@@ -1,0 +1,17 @@
+import mongoose from 'mongoose';
+
+const Schema = mongoose.Schema;
+
+const Page = new Schema({
+  name: String,
+  prototypeId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Prototype',
+  },
+  pageTypeId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'PageType',
+  },
+});
+
+export default mongoose.model('Page', Page);
