# app/api/prototypes/model.js
@@ -1,11 +1,23 @@
 import mongoose from 'mongoose';
 
+import Page from '../pages/model';
+
 const Schema = mongoose.Schema;
 
-export default mongoose.model('Prototype', new Schema({
+const Prototype = new Schema({
   name: String,
-  user: {
+  isMobile: {
+    type: Boolean,
+    default: false,
+  },
+  userId: {
     type: mongoose.Schema.Types.ObjectId,
     ref: 'User',
   },
-}));
+});
+
+Prototype.post('remove', (doc) => {
+  Page.remove({ prototypeId: doc._id }).exec();
+});
+
+export default mongoose.model('Prototype', Prototype);
